@@ -621,3 +621,4 @@ in 0.1.13.
 - remove refnx._lib._qmc, changing to scipy.stats.qmc.
 - transition vendored ptemcee to use np.random.Generator.
 - convert use of scipy.integrate.quadrature to scipy.integrate.quad.
+- Appropriate unit conversion when loading ORSO data (1/nm to 1/angstrom).
